tests/integration/security/testdata/alpha-mtls-automtls.yaml
# Verify auto mTLS (still) works with alpha policy.
apiVersion: authentication.istio.io/v1alpha1
kind: MeshPolicy
metadata:
  name: "default"
spec:
  peers:
  - mtls: {}
---
apiVersion: authentication.istio.io/v1alpha1
kind: Policy
metadata:
  name: "b-mtls-off"
spec:
  targets:
  - name: "b"
---
apiVersion: authentication.istio.io/v1alpha1
kind: Policy
metadata:
  name: "b-80-mtls-on"
spec:
  targets:
  - name: "b"
    ports:
    - name: http
  peers:
  - mtls: {}
