tests/integration/security/testdata/automtls-partial-sidecar-dr-mutual.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  annotations:
    test-suite: "automtls-partial-dr-mutual"
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "multiversion-route"
  annotations:
    test-suite: "automtls-partial-dr-mutual"
spec:
  hosts:
  - "multiversion"
  http:
  - name: "vistio-route"
    match:
    - uri:
        prefix: "/vistio"
    route:
    - destination:
        host: "multiversion"
        subset: "vistio"
  - name: "legacy-by-default"
    route:
    - destination:
        host: "multiversion"
        subset: "vlegacy"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "multiversion"
  annotations:
    test-suite: "automtls-partial-dr-mutual"
spec:
  host: "multiversion"
  subsets:
  - name: "vistio"
    labels:
      version: "vistio"
  - name: "vlegacy"
    labels:
      version: "vlegacy"
  trafficPolicy:
    tls:
      mode: DISABLE
