tests/integration/security/testdata/automtls-partial-sidecar-dr-no-tls.yaml
# Alpha API disable, making test more hermetic.
apiVersion: authentication.istio.io/v1alpha1
kind: MeshPolicy
metadata:
  name: "default"
  annotations:
    test-suite: "beta-mtls-workload-automtls"
spec: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "multiversion-route"
  annotations:
    test-suite: "beta-mtls-workload-automtls"
spec:
  hosts:
  - "multiversion"
  http:
  - name: "v1-route"
    match:
    - uri:
        prefix: "/v1"
    rewrite:
      uri: "/v1"
    route:
    - destination:
        host: "multiversion"
        subset: "v1"
  - name: "v2-route-by-default"
    route:
    - destination:
        host: "multiversion"
        subset: "v2"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "multiversion-subset"
  annotations:
    test-suite: "beta-mtls-workload-automtls"
spec:
  host: "multiversion"
  subsets:
  - name: "v1"
    labels:
      version: "v1"
  - name: "v2"
    labels:
      version: "v2"
