tests/integration/security/testdata/automtls-passthrough.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: passthrough
  annotations:
    test-suite: automtls-passthrough
spec:
  host: "*"
  trafficPolicy:
    loadBalancer:
      simple: PASSTHROUGH
