tests/integration/security/testdata/beta-mtls-automtls.yaml
# No DR is added for this test. enableAutoMtls is expected on by default.
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  annotations:
    test-suite: "beta-mtls-automtls"
spec:
  mtls:
    mode: STRICT
