tests/integration/security/testdata/beta-mtls-off-headless-nake.yaml
# Alpha API disable, making test more hermetic.
# No DR is added for this test. enableAutoMtls is expected on by default.
# Workload-level PeerAuthentication will expectedly cause trouble to connect to the corresponding service
apiVersion: authentication.istio.io/v1alpha1
kind: MeshPolicy
metadata:
  name: "default"
  annotations:
    test-suite: "beta-mtls-partial-automtls"
spec: {}
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  annotations:
    test-suite: "beta-mtls-off"
spec:
  mtls:
    mode: DISABLE  # This is to simulate a headless service without proxy
