tests/integration/security/testdata/beta-mtls-off.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  annotations:
    test-suite: "beta-mtls-off"
spec:
  mtls:
    mode: DISABLE
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  annotations:
    test-suite: "beta-mtls-off"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: DISABLE
