tests/integration/security/testdata/beta-mtls-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: a-route
spec:
  hosts:
  - a.{{ .Namespace }}.svc.cluster.local
  http:
  - name: "v1-route"
    match:
    - uri:
        prefix: "/v1-route"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: a.{{ .Namespace }}.svc.cluster.local
        subset: v1
  - name: "v2-route"
    route:
    - destination:
        host: a.{{ .Namespace }}.svc.cluster.local
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews-destination
spec:
  host: a.{{ .Namespace }}.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
