tests/integration/security/testdata/beta-mtls-workload-automtls.yaml
# Alpha API disable, making test more hermetic.
apiVersion: authentication.istio.io/v1alpha1
kind: MeshPolicy
metadata:
  name: "default"
  annotations:
    test-suite: "beta-mtls-workload-automtls"
spec: {}
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "multiversion-v1-mtls"
  annotations:
    test-suite: "beta-mtls-workload-automtls"
spec:
  selector:
    matchLabels:
      "app": "multiversion"
      "version": "v1"
  mtls:
    mode: STRICT
---
# explicit disable to make test input more hermetic, rather than affected by other defaults.
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "multiversion-v2-disable"
  annotations:
    test-suite: "beta-mtls-workload-automtls"
spec:
  selector:
    matchLabels:
      "app": "multiversion"
      "version": "v2"
  mtls:
    mode: DISABLE
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "b-strict"
  annotations:
    test-suite: "beta-mtls-workload-automtls"
spec:
  selector:
    matchLabels:
      "app": "b"
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "multiversion-route"
  annotations:
    test-suite: "beta-mtls-workload-automtls"
spec:
  hosts:
  - "multiversion"
  http:
  - name: "v1-route"
    match:
    - uri:
        prefix: "/v1"
    rewrite:
      uri: "/v1"
    route:
    - destination:
        host: "multiversion"
        subset: "v1"
  - name: "v2-route-by-default"
    route:
    - destination:
        host: "multiversion"
        subset: "v2"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "multiversion-subset"
  annotations:
    test-suite: "beta-mtls-workload-automtls"
spec:
  host: "multiversion"
  subsets:
  - name: "v1"
    labels:
      version: "v1"
  - name: "v2"
    labels:
      version: "v2"
