tests/integration/security/testdata/beta-per-port-mtls.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "per-port"
  annotations:
    test-suite: "beta-per-port-mtls"
spec:
  selector:
    matchLabels:
      app: b
  mtls:
    mode: DISABLE
  portLevelMtls:
    80:
      mode: STRICT
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  annotations:
    test-suite: "beta-mtls-on"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: DISABLE
