tests/integration/security/testdata/global-mtls-off.yaml
apiVersion: "authentication.maistra.io/v1"
kind: "ServiceMeshPolicy"
metadata:
  name: "default"
spec: {}
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: DISABLE
