tests/integration/security/testdata/global-mtls-on.yaml
apiVersion: authentication.istio.io/v1alpha1
kind: MeshPolicy
metadata:
  name: "default"
spec:
  peers:
  - mtls: {}
---
# apiVersion: "networking.istio.io/v1alpha3"
# kind: "DestinationRule"
# metadata:
#   name: "default"
# spec:
#   host: "*.local"
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
