tests/integration/security/testdata/port-level-plaintext.yaml
# mTLS is disabled without destination rule.
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  annotations:
    test-suite: "beta-mtls-off"
spec:
  portLevelMtls:
    # 8090 is the targetPort for service http(80)
    8090:
      mode: STRICT
